--- a/.github/workflows/run_on_gpu.yml
+++ b/.github/workflows/run_on_gpu.yml
@@ -12,4 +12,8 @@ jobs:
     steps:
     - name: test run on gpu
       run: |
+        cd /workspalce
+        rm -rf ./multi-lora-fine-tune
+        git clone git@github.com:TUDB-Labs/multi-lora-fine-tune.git
+        cd multi-lora-fine-tune
         python mlora.py --base_model /data/vicuna-7b-delta-v0 --config ./config/finetune.json --load_8bit true
