--- a/.github/workflows/python-test-dev.yml
+++ b/.github/workflows/python-test-dev.yml
@@ -1,13 +1,12 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: Test on Development Branches
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - '*_dev'
 
 permissions:
   contents: read
