--- a/.github/workflows/run_on_gpu.yml
+++ b/.github/workflows/run_on_gpu.yml
@@ -27,7 +27,7 @@ jobs:
         cd /workspace
         rm -rf ./multi-lora-fine-tune
         git clone git@github.com:TUDB-Labs/multi-lora-fine-tune.git
-    - name: test vicuna-7b-delta-v0
+    - name: test vicuna-7b-v1.1
       run: |
         cd /workspace/multi-lora-fine-tune
-        python mlora.py --base_model /data/vicuna-7b-delta-v0 --config ./config/finetune.json --load_8bit true
+        python mlora.py --base_model /data/vicuna-7b-v1.1 --config ./config/finetune.json --load_8bit true
