--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ accelerate==0.21.0
 transformers==4.31.0
 bitsandbytes==0.40.0
 sentencepiece==0.1.99
-scipy
-xformers
+scipy==1.10.1
+xformers==0.0.20
