--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
 torch==2.0.1
 einops==0.6.1
 accelerate==0.21.0
-transformers~=4.32.1
+transformers=4.31.0
 bitsandbytes==0.40.0
 sentencepiece==0.1.99
 scipy==1.10.1
-xformers~=0.0.21
-nltk~=3.8.1
-jieba~=0.42.1
-gradio~=3.41.2
-peft~=0.5.0
+xformers=0.0.20
+nltk
+jieba
+gradio
 rouge
 rouge_chinese
