--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 torch==2.0.1
 einops==0.6.1
+datasets==2.14.0
 accelerate==0.21.0
 transformers==4.31.0
 bitsandbytes==0.40.0
@@ -10,4 +11,3 @@ nltk
 jieba
 rouge
 rouge_chinese
-datasets
