--- a/.github/workflows/run_on_gpu.yml
+++ b/.github/workflows/run_on_gpu.yml
@@ -19,6 +19,10 @@ jobs:
       run: |
         cd /workspace/multi-lora-fine-tune
         python mlora.py --base_model /data/llama-7b-hf --config ./config/finetune.json --load_8bit
+    - name: test inference
+      run: |
+        cd /workspace/multi-lora-fine-tune
+        python ci_script.py "inference" "./lora_0" "tell me a joke"
   test-vicuna-7b:
     runs-on: self-hosted
     steps:
@@ -31,3 +35,7 @@ jobs:
       run: |
         cd /workspace/multi-lora-fine-tune
         python mlora.py --base_model /data/vicuna-7b-v1.1 --config ./config/finetune.json --load_8bit
+    - name: test inference
+      run: |
+        cd /workspace/multi-lora-fine-tune
+        python ci_script.py "inference" "./lora_0" "tell me a joke"
