--- a/.github/workflows/run_on_gpu.yml
+++ b/.github/workflows/run_on_gpu.yml
@@ -22,7 +22,7 @@ jobs:
     - name: test inference
       run: |
         cd /workspace/multi-lora-fine-tune
-        python ci_scripts.py "inference" "./lora_0" "tell me a joke"
+        python ci_scripts.py "llama" "/data/llama-7b-hf" "./lora_0" "tell me a joke"
 
   test-vicuna-7b:
     runs-on: self-hosted
@@ -39,7 +39,7 @@ jobs:
     - name: test inference
       run: |
         cd /workspace/multi-lora-fine-tune
-        python ci_scripts.py "inference" "./lora_0" "tell me a joke"
+        python ci_scripts.py "llama" "/data/vicuna-7b-v1.1" "./lora_0" "tell me a joke"
 
   test-chatglm2-6b:
     runs-on: self-hosted
@@ -56,4 +56,4 @@ jobs:
     - name: test inference
       run: |
         cd /workspace/multi-lora-fine-tune
-        python ci_scripts.py "inference" "./lora_0" "tell me a joke"
+        python ci_scripts.py "chatglm" "/data/THUDM/chatglm2-6b" "./lora_0" "tell me a joke"
