--- a/.github/workflows/run_on_gpu.yml
+++ b/.github/workflows/run_on_gpu.yml
@@ -14,7 +14,7 @@ jobs:
         run: |
           cd /workspace
           rm -rf ./multi-lora-fine-tune
-          git clone https://github.com/TUDB-Labs/multi-lora-fine-tune.git
+          git clone git@github.com:TUDB-Labs/multi-lora-fine-tune.git
       - name: test llama-7b
         run: |
           cd /workspace/multi-lora-fine-tune
@@ -31,7 +31,7 @@ jobs:
         run: |
           cd /workspace
           rm -rf ./multi-lora-fine-tune
-          git clone https://github.com/TUDB-Labs/multi-lora-fine-tune.git
+          git clone git@github.com:TUDB-Labs/multi-lora-fine-tune.git
       - name: test vicuna-7b-v1.1
         run: |
           cd /workspace/multi-lora-fine-tune
@@ -48,7 +48,7 @@ jobs:
         run: |
           cd /workspace
           rm -rf ./multi-lora-fine-tune
-          git clone https://github.com/TUDB-Labs/multi-lora-fine-tune.git
+          git clone git@github.com:TUDB-Labs/multi-lora-fine-tune.git
       - name: test chatglm2-6b
         run: |
           cd /workspace/multi-lora-fine-tune
