--- a/.github/workflows/run_on_dev.yml
+++ b/.github/workflows/run_on_dev.yml
@@ -2,9 +2,11 @@ name: Test LLM Models on Dev
 
 on:
   push:
-    branches: [ "!main" ]
+    branches:
+      - '*'
   pull_request:
-    branches: [ "!main" ]
+    branches:
+      - '*'
 jobs:
   test-llama-7b:
     runs-on: self-hosted
