--- a/.github/workflows/run_on_dev.yml
+++ b/.github/workflows/run_on_dev.yml
@@ -11,24 +11,33 @@ jobs:
   test-llama-7b:
     runs-on: self-hosted
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Get Branch Name
+        id: branch_name
+        run: echo "::set-output name=branch::${GITHUB_REF#refs/heads/}"
+
       - name: clone repository
         run: |
+          current_branch="${{ steps.branch_name.outputs.branch }}"
           cd /workspace
           rm -rf ./multi-lora-fine-tune
-          git clone -b ${{ steps.branch_name.outputs.branch }} --single-branch git@github.com:TUDB-Labs/multi-lora-fine-tune.git
+          git clone -b $current_branch --single-branch git@github.com:TUDB-Labs/multi-lora-fine-tune.git
       - name: test llama-7b
         run: |
           cd /workspace/multi-lora-fine-tune
           python mlora.py --base_model /data/llama-7b-hf --config ./config/finetune.json --load_8bit
-  test-vicuna-7b:
-    runs-on: self-hosted
-    steps:
-      - name: clone repository
-        run: |
-          cd /workspace
-          rm -rf ./multi-lora-fine-tune
-          git clone -b ${{ steps.branch_name.outputs.branch }} --single-branch git@github.com:TUDB-Labs/multi-lora-fine-tune.git
-      - name: test vicuna-7b-v1.1
-        run: |
-          cd /workspace/multi-lora-fine-tune
-          python mlora.py --base_model /data/vicuna-7b-v1.1 --config ./config/finetune.json --load_8bit
+
+#  test-vicuna-7b:
+#    runs-on: self-hosted
+#    steps:
+#      - name: clone repository
+#        run: |
+#          cd /workspace
+#          rm -rf ./multi-lora-fine-tune
+#          git clone -b ${{ steps.branch_name.outputs.branch }} --single-branch git@github.com:TUDB-Labs/multi-lora-fine-tune.git
+#      - name: test vicuna-7b-v1.1
+#        run: |
+#          cd /workspace/multi-lora-fine-tune
+#          python mlora.py --base_model /data/vicuna-7b-v1.1 --config ./config/finetune.json --load_8bit
