--- a/.github/workflows/run_on_dev.yml
+++ b/.github/workflows/run_on_dev.yml
@@ -4,13 +4,14 @@ on:
   push:
     branches:
       - '*'
-  pull_request:
-    branches:
-      - '*'
 jobs:
   test-llama-7b:
     runs-on: self-hosted
     steps:
+      - name: Get Branch Name
+        id: branch_name
+        run: echo "::set-output name=branch::${GITHUB_REF#refs/heads/}"
+
       - name: clone repository
         run: |
           current_branch="${{ steps.branch_name.outputs.branch }}"
