--- a/.github/workflows/run_on_dev.yml
+++ b/.github/workflows/run_on_dev.yml
@@ -3,7 +3,7 @@ name: Test LLM Models on Dev
 on:
   push:
     branches:
-      - '*'
+      - '!main'
 jobs:
   test-llama-7b:
     runs-on: self-hosted
