--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,16 +10,23 @@ readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: Apache License",
+    "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
 ]
 dependencies = [
     "torch==2.0.1",
-    "einops",
-    "xformers",
-    "transformers",
-    "bitsandbytes",
-    "sentencepiece",
+    "einops==0.6.1",
+    "datasets==2.14.5",
+    "accelerate==0.21.0",
+    "transformers==4.30.2",
+    "bitsandbytes==0.40.0",
+    "sentencepiece==0.1.99",
+    "scipy==1.10.1",
+    "xformers==0.0.20",
+    "nltk",
+    "jieba",
+    "rouge",
+    "rouge_chinese"
 ]
 
 [project.urls]
