--- a/.github/workflows/run_on_dev.yml
+++ b/.github/workflows/run_on_dev.yml
@@ -29,7 +29,7 @@ jobs:
       - name: test inference with lora
         run: |
           cd /workspace/multi-lora-fine-tune
-          python ci_script.py "llama" "/data/llama-7b-hf" "./lora_0" "Say something."
+          python .github/workflows/ci_script.py "llama" "/data/llama-7b-hf" "./lora_0" "Say something."
 
   test-vicuna-7b:
     runs-on: self-hosted
@@ -53,7 +53,7 @@ jobs:
       - name: test inference with lora
         run: |
           cd /workspace/multi-lora-fine-tune
-          python ci_script.py "llama" "/data/vicuna-7b-v1.1" "./lora_0" "Say something."
+          python .github/workflows/ci_script.py "llama" "/data/vicuna-7b-v1.1" "./lora_0" "Say something."
 
   test-chatglm2:
     runs-on: self-hosted
@@ -77,4 +77,4 @@ jobs:
       - name: test inference with lora
         run: |
           cd /workspace/multi-lora-fine-tune
-          python ci_script.py "chatglm" "/data/THUDM/chatglm2-6b" "./lora_0" "Say something."
+          python .github/workflows/ci_script.py "chatglm" "/data/THUDM/chatglm2-6b" "./lora_0" "Say something."
