--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ einops==0.6.1
 datasets==2.14.5
 accelerate==0.21.0
 transformers==4.30.2
-bitsandbytes==0.40.0
+bitsandbytes==0.40.2
 sentencepiece==0.1.99
 scipy==1.10.1
 xformers==0.0.20
@@ -14,3 +14,4 @@ rouge_chinese
 flask
 peft
 protobuf==3.20.1
+flash-attn==2.4.2
