--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "mlora"
-version = "0.1"
+version = "0.2"
 description = "A tool for fine-tuning large language models (LLMs) using the LoRA or QLoRA methods more efficiently."
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: Apache Software License",
@@ -19,10 +19,12 @@ dependencies = [
     "datasets==2.14.5",
     "accelerate==0.21.0",
     "transformers==4.30.2",
-    "bitsandbytes==0.40.0",
+    "bitsandbytes==0.40.2",
     "sentencepiece==0.1.99",
     "scipy==1.10.1",
+    "protobuf==3.20.1",
     "xformers==0.0.20",
+    "huggingface_hub",
     "nltk",
     "jieba",
     "rouge",
