feature: add MixLoRA model support, improve inference speed and framework design (#144)
Features
    Add MixLoRA Model Support
    * MixLoRA is a LoRA based Mix-of-Expert adapter model
    * Support two different routing strategies: Mixtral and Switch Transformers (mlora/MixLoRA.py)
    Improve Inference Speed
    * Support kv-cache and top-p sampling
    * Rewrite Web UI of inference based on m-LoRA (inference.py)
    Improve Framework Design
    * Generic MoE support (mlora/FeedForward.py)
    * More user-friendly APIs (see example in generate.py)
    * Uniform logging mechanism
    * Build-in trainer and generator (mlora/train.py and mlora/generate.py)

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,17 @@ einops==0.6.1
 datasets==2.14.5
 accelerate==0.21.0
 transformers==4.30.2
-bitsandbytes==0.40.0
+bitsandbytes==0.40.2
 sentencepiece==0.1.99
 scipy==1.10.1
+protobuf==3.20.1
 xformers==0.0.20
+huggingface_hub
 nltk
 jieba
 rouge
 rouge_chinese
 flask
 peft
-protobuf==3.20.1
+gradio==3.50
+fire
