--- a/.github/workflows/run_on_dev.yml
+++ b/.github/workflows/run_on_dev.yml
@@ -96,4 +96,9 @@ jobs:
       - name: finetune llama-7b with mixlora
         run: |
           cd /workspace/multi-lora-fine-tune
-          python mlora.py --base_model /data/llama-7b-hf --config ./config/finetune_mixlora.json --load_8bit
+          python mlora.py --base_model /data/llama-7b-hf --config ./config/dummy_mixlora.json --load_8bit
+      
+      - name: test inference with lora
+        run: |
+          cd /workspace/multi-lora-fine-tune
+          python generate.py --base_model "/data/llama-7b-hf" --lora_weights "./lora_0" --load_16bit --instruction "What is m-LoRA?"
