--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "torch==2.0.1",
     "einops==0.6.1",
     "datasets==2.14.5",
+    "evaluate==0.4.1",
     "accelerate==0.21.0",
     "transformers==4.30.2",
     "bitsandbytes==0.40.2",
