--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,12 +17,13 @@ dependencies = [
     "torch==2.0.1",
     "einops==0.6.1",
     "datasets==2.14.5",
-    "accelerate==0.21.0",
-    "transformers==4.30.2",
-    "bitsandbytes==0.40.0",
+    "accelerate==0.24.1",
+    "transformers==4.36.2",
+    "bitsandbytes==0.41.1",
     "sentencepiece==0.1.99",
     "scipy==1.10.1",
-    "xformers==0.0.20",
+    "protobuf==3.20.2",
+    "xformers==0.0.21",
     "nltk",
     "jieba",
     "rouge",
