--- a/.gitignore
+++ b/.gitignore
@@ -174,6 +174,7 @@ template/*
 !data/dummy_data.json
 !template/test_data_demo.json
 !template/template_demo.json
+data_train.json
 
 # macOS junk files
 .DS_Store
