remove old evaluator

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,8 @@ scipy==1.10.1
 protobuf==3.20.2
 xformers==0.0.21
 huggingface_hub
-nltk
-jieba
-rouge
-rouge_chinese
 flask
 peft
 gradio==4.11.0
 fire
+pandas
