--- a/.github/workflows/run_on_dev.yml
+++ b/.github/workflows/run_on_dev.yml
@@ -1,4 +1,4 @@
-name: Test LLM Models on Dev
+name: Additional Test on Dev
 
 on:
   push:
@@ -7,41 +7,7 @@ on:
         - 'main'
 
 jobs:
-  test-llama-7b:
-    runs-on: self-hosted
-    steps:
-      - name: Get Branch Name
-        id: branch_name
-        run: echo "::set-output name=branch::${GITHUB_REF#refs/heads/}"
-
-      - name: clone repository
-        run: |
-          current_branch="${{ steps.branch_name.outputs.branch }}"
-          cd /workspace
-          rm -rf ./multi-lora-fine-tune
-          git clone -b $current_branch --single-branch git@github.com:TUDB-Labs/multi-lora-fine-tune.git
-
-      - name: install dependencies
-        run: |
-          cd /workspace/multi-lora-fine-tune
-          pip install -r requirements.txt --force
-
-      - name: evaluate llama-7b (mmlu)
-        run: |
-          cd /workspace/multi-lora-fine-tune
-          python .github/workflows/ci_eval.py
-
-      - name: finetune llama-7b
-        run: |
-          cd /workspace/multi-lora-fine-tune
-          python mlora.py --base_model /data/llama-7b-hf --config ./config/dummy.json --load_8bit
-
-      - name: inference llama-7b with lora (peft)
-        run: |
-          cd /workspace/multi-lora-fine-tune
-          python .github/workflows/ci_script.py "llama" "/data/llama-7b-hf" "./lora_1" "What is m-LoRA?" "Multi-LoRA"
-    
-  additional-test:
+  additonal-test:
     runs-on: self-hosted
     steps:
       - name: Get Branch Name
@@ -60,7 +26,22 @@ jobs:
           cd /workspace/multi-lora-fine-tune
           pip install -e .
           pip install -r requirements.txt --force
-      
+
+      - name: evaluate llama-7b (mmlu)
+        run: |
+          cd /workspace/multi-lora-fine-tune
+          python .github/workflows/ci_eval.py
+
+      - name: finetune llama-7b
+        run: |
+          cd /workspace/multi-lora-fine-tune
+          python mlora.py --base_model /data/llama-7b-hf --config ./config/dummy.json --load_8bit
+
+      - name: inference llama-7b with lora (peft)
+        run: |
+          cd /workspace/multi-lora-fine-tune
+          python .github/workflows/ci_script.py "llama" "/data/llama-7b-hf" "./lora_1" "What is m-LoRA?" "Multi-LoRA"
+
       - name: transport test
         run: |
           cd /workspace/multi-lora-fine-tune
