--- a/.github/workflows/run_on_dev.yml
+++ b/.github/workflows/run_on_dev.yml
@@ -19,17 +19,20 @@ jobs:
           current_branch="${{ steps.branch_name.outputs.branch }}"
           cd /workspace
           rm -rf ./multi-lora-fine-tune
-          git clone -b $current_branch --single-branch git@github.com:TUDB-Labs/multi-lora-fine-tune.git
+          git clone -b $current_branch --single-branch git@github.com:mikecovlee/mlora.git
+      
+      - name: install dependencies
+        run: pip install -r requirements.txt
 
       - name: finetune llama-7b
         run: |
           cd /workspace/multi-lora-fine-tune
-          python mlora.py --base_model /data/llama-7b-hf --config ./config/dummy.json --load_8bit
+          python mlora.py --base_model /data/llama-7b-hf --config ./config/dummy.json --load_16bit
 
       - name: test inference with lora
         run: |
           cd /workspace/multi-lora-fine-tune
-          python .github/workflows/ci_script.py "llama" "/data/llama-7b-hf" "./lora_1" "What is m-LoRA?"
+          python generate.py --base_model "/data/llama-7b-hf" --lora_weights "./lora_0" --load_16bit --instruction "What is m-LoRA?"
 
   test-mixlora:
     runs-on: self-hosted
@@ -43,12 +46,15 @@ jobs:
           current_branch="${{ steps.branch_name.outputs.branch }}"
           cd /workspace
           rm -rf ./multi-lora-fine-tune
-          git clone -b $current_branch --single-branch git@github.com:TUDB-Labs/multi-lora-fine-tune.git
+          git clone -b $current_branch --single-branch git@github.com:mikecovlee/mlora.git
+      
+      - name: install dependencies
+        run: pip install -r requirements.txt
 
       - name: finetune llama-7b with mixlora
         run: |
           cd /workspace/multi-lora-fine-tune
-          python mlora.py --base_model /data/llama-7b-hf --config ./config/dummy_mixlora.json --load_8bit
+          python mlora.py --base_model /data/llama-7b-hf --config ./config/dummy_mixlora.json --load_16bit
       
       - name: test inference with lora
         run: |
