--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,8 @@ dependencies = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/TUDB-Labs/multi-lora-fine-tune"
-"Bug Tracker" = "https://github.com/TUDB-Labs/multi-lora-fine-tune/issues"
+"Homepage" = "https://github.com/mikecovlee/mlora"
+"Bug Tracker" = "https://github.com/mikecovlee/mlora/issues"
 
 [tool.setuptools.packages.find]
 include = ["mlora"]
