--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "protobuf==3.20.2",
     "xformers==0.0.21",
     "huggingface_hub",
+    "scikit-learn",
 ]
 
 [project.urls]
