--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,16 +15,13 @@ classifiers = [
 ]
 dependencies = [
     "torch==2.0.1",
-    "einops==0.6.1",
-    "datasets==2.14.5",
-    "evaluate==0.4.1",
-    "accelerate==0.24.1",
-    "transformers==4.36.2",
-    "bitsandbytes==0.41.1",
-    "sentencepiece==0.1.99",
-    "scipy==1.10.1",
-    "protobuf==3.20.2",
-    "xformers==0.0.21",
+    "datasets",
+    "evaluate",
+    "accelerate",
+    "transformers==4.38.2",
+    "bitsandbytes==0.41.3",
+    "sentencepiece",
+    "xformers==0.0.22",
     "huggingface_hub",
     "scikit-learn",
 ]
