--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "torch==2.0.1",
+    "torch>=2.1.2",
     "datasets",
     "evaluate",
     "accelerate",
