--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "mlora"
-version = "0.2.1"
+version = "0.2.1.post1"
 description = "A tool for fine-tuning large language models (LLMs) using the LoRA or QLoRA methods more efficiently."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -29,4 +29,4 @@ dependencies = [
 "Bug Tracker" = "https://github.com/scukdde-llm/mlora/issues"
 
 [tool.setuptools.packages.find]
-include = ["mlora"]
+include = ["mlora*"]
