--- a/.github/workflows/mlora-test.yml
+++ b/.github/workflows/mlora-test.yml
@@ -1,15 +1,9 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: Test on Main
+name: Test LLM Models
 
 on: [push, pull_request]
 
-permissions:
-  contents: read
-
 jobs:
-  build:
+  test-lora:
     runs-on: self-hosted
     container:
       image: mikecovlee/mlora:0.2.1.dev1
@@ -17,18 +11,14 @@ jobs:
         - /home/lab/models:/host_models/
       options: --gpus 1
     steps:
-    - uses: actions/checkout@v3
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        pip install -e .
-    - name: Lint with flake8
-      run: |
-        flake8 . --count --show-source --statistics --max-line-length=127 --max-complexity 15 --ignore=E722,W504,W503
-    - name: check torch gpu
-      run: |
-        python tests/check_cuda.py
-    - name: Test with pytest
-      run: |
-        pytest
+      - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: |
+          pip3 install -r requirements.txt
+          bash install_linux.sh
+      - name: finetune lora
+        run: |
+          python mlora.py --base_model /host_models/TinyLlama-1.1B-intermediate-step-1431k-3T --config ./config/dummy.json --fp16 --attn_impl eager
+      - name: inference with lora
+        run: |
+          python generate.py --base_model /host_models/TinyLlama-1.1B-intermediate-step-1431k-3T --lora_weights "./lora_0" --instruction "What is m-LoRA?"
