--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -10,23 +10,19 @@ permissions:
 
 jobs:
   build:
-
     runs-on: self-hosted
     container:
-     options: --gpus 1
-
+      image: mikecovlee/mlora:0.2.1.dev1
+      volumes:
+        - /home/lab/models:/host_models/
+      options: --gpus 1
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
         pip install -e .
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
         flake8 . --count --show-source --statistics --max-line-length=127 --max-complexity 15 --ignore=E722,W504,W503
