--- a/tests/dpo/dpo_case_2.yaml
+++ b/tests/dpo/dpo_case_2.yaml
@@ -9,6 +9,7 @@ datasets:
 adapters:
   - type: "lora"
     name: "lora_sft"
+    path: "adapters/lora_sft"
     optimizer: "none"
     lrscheduler: "none"
     r: 32
@@ -24,6 +25,7 @@ adapters:
       up_proj: true
   - type: "lora"
     name: "lora_dpo"
+    path: "adapters/lora_dpo"
     optimizer: "adamw"
     lr: 3e-4
     lrscheduler: "none"
