[feature] support for lora+
* change the readme
* split the context to train context and inference context for the
  feature of inferece
* upgrade the python to 3.12 for the override support, improve the code
  readablility
* change the design pic, TODO: add the document
* remove the requirements, use the pyproject to manage the dependencies and
  test case.
* modify some typo

--- a/.gitignore
+++ b/.gitignore
@@ -168,12 +168,7 @@ __pycache__/
 *.egg
 
 data/*
-!data/AlpacaDataCleaned/
-template/*
-!data/data_demo.json
-!data/dummy_data.json
-!template/test_data_demo.json
-!template/template_demo.json
+adapters/*
 
 # macOS junk files
 .DS_Store
