[improvement] add some test case in ci

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,8 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-test = ["pytest", "flake8", "lizard"]
+ci_test = ["pytest", "flake8", "lizard"]
+test = ["peft"]
 debug = ["graphviz"]
 
 [tool.pytest.ini_options]
